<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/caramel"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_field"
            android:hint="@string/title"
            android:inputType="text"
            android:textColor="@color/kaien"
            android:textColorHint="@color/caramel"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true">
        </com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/author_field"
            android:hint="@string/author"
            android:inputType="text"
            android:textColor="@color/kaien"
            android:textColorHint="@color/caramel"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true">
        </com.rengwuxian.materialedittext.MaterialEditText>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description_field"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textColor="@color/kaien"
            android:textColorHint="@color/caramel"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true">
        </com.rengwuxian.materialedittext.MaterialEditText>

    </LinearLayout>

</androidx.cardview.widget.CardView>