<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/paymentLayout"
    android:background="@color/caramel"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvLabelSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="104dp"
        android:textColor="@color/brown"
        android:text="@string/functionLabelText"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spFunctions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spFunctions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="70dp"
        android:layout_marginRight="80dp"
        style="@style/mySpinnerItemStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvLabelTitle"/>

    <TextView
        android:id="@+id/tvLabelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/brown"
        android:text="@string/startDate"
        app:layout_constraintBottom_toTopOf="@id/etStartDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etStartDate"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spFunctions" />

    <TextView
        android:id="@+id/tvLabelEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textColor="@color/brown"
        android:text="@string/endDate"
        app:layout_constraintBottom_toTopOf="@id/etEndDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etEndDate"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/etStartDate"
        app:layout_constraintTop_toBottomOf="@+id/etStartDate" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_brown"
        android:layout_marginTop="80dp"
        android:text="@string/payButtonText"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etEndDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>